--- a/code/cart.html
+++ b/code/cart.html
@@ -200,211 +200,9 @@
 
 
 
-    <div id="total"></div>
+    <!-- <div id="total"></div> -->
 
-    <!-- <footer>
-        <div class="row">
-            <div class="col-lg-2"></div>
-            <div class="col-lg-2 col-6">
-                <div class="footer-data">
-                    <p class="mb-1">Get to Know Us</p>
-                    <ul>
-                        <li><a href="javascript:void(0);">About Us</a></li>
-                        <li><a href="javascript:void(0);">Careers</a></li>
-                        <li><a href="javascript:void(0);">Press Releases</a></li>
-                        <li><a href="javascript:void(0);">Amazon Science</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-lg-2 col-6">
-                <div class="footer-data">
-                    <p class="mb-0">Contact with us</p>
-                    <ul>
-                        <li><a href="javascript:void(0);">Facebook</a></li>
-                        <li><a href="javascript:void(0);">Twitter</a></li>
-                        <li><a href="javascript:void(0);">instagram</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-lg-2 col-sm-6 col-12">
-                <div class="footer-data money">
-                    <p class="mb-0">Make money with us</p>
-                    <ul>
-                        <li><a href="javascript:void(0);">Sell on Amazon</a></li>
-                        <li><a href="javascript:void(0);">Sell under Amazon Accelerator</a></li>
-                        <li><a href="javascript:void(0);">Protect and Build Your Brand</a></li>
-                        <li><a href="javascript:void(0);">Amazon Global Selling</a></li>
-                        <li><a href="javascript:void(0);">Become an Affiliate</a></li>
-                        <li><a href="javascript:void(0);">Fulfilment by Amazon</a></li>
-                        <li><a href="javascript:void(0);">Advertise Your Products</a></li>
-                        <li><a href="javascript:void(0);">Amazon Pay on Merchants</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-lg-2 col-sm-6 col-12">
-                <div class="footer-data">
-                    <p class="mb-0">Let Us Help You</p>
-                    <ul>
-                        <li><a href="javascript:void(0);">COVID-19 and Amazon</a></li>
-                        <li><a href="javascript:void(0);">Your Account</a></li>
-                        <li><a href="javascript:void(0);">Returns Centre</a></li>
-                        <li><a href="javascript:void(0);">100% Purchase Protection</a></li>
-                        <li><a href="javascript:void(0);">Amazon App Download</a></li>
-                        <li><a href="javascript:void(0);">Help</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-lg-2"></div>
-            <div class="line"></div>
-            <div class="web-fot">
-                <div class="branch d-flex justify-content-center">
-                    <div class="fot-logo">
-                        <img src="images/a-logo.png" class="mt-2" alt="logo image" />
-                    </div>
-                    <div class="flyout align-self-center px-lg-2">
-                        <div class="fy-card d-flex justify-content-center">
 
-                            <div class="flyout-card">
-                                <button><i class="fa-solid fa-globe pe-2"></i>English <i
-                                        class="fa-solid fa-caret-down ps-2"></i> </button>
-                            </div>
-                        </div>
-                        <div class="menu">
-                            <ul class="mb-0">
-                                <li><a href="javascript:void(0);"><input type="radio" name="lg"
-                                            class="me-2">English-EN</a>
-                                </li>
-                                <div class="line1"></div>
-                                <li><a href="javascript:void(0);"><input type="radio" name="lg" class="me-2">हिन्दी
-                                        -Hi</a>
-                                </li>
-                                <li><a href="javascript:void(0);"><input type="radio" name="lg" class="me-2">தமிழ்
-                                        -TA</a>
-                                </li>
-                                <li><a href="javascript:void(0);"><input type="radio" name="lg"
-                                            class="me-2">తెలుగు-TE</a>
-                                </li>
-                                <li><a href="javascript:void(0);"><input type="radio" name="lg"
-                                            class="me-2">ಕನ್ನಡ-KN</a>
-                                </li>
-                                <li><a href="javascript:void(0);"><input type="radio" name="lg"
-                                            class="me-2">മലയാളം-ML</a>
-                                </li>
-                                <li><a href="javascript:void(0);"><input type="radio" name="lg"
-                                            class="me-2">বাংলা-BN</a>
-                                </li>
-                                <li><a href="javascript:void(0);"><input type="radio" name="lg"
-                                            class="me-2">मराठी-MR</a>
-                                </li>
-                                <a href="javascript:void(0)">learn more</a>
-                                <div class="line1"></div>
-                                <div class="fy-card d-flex">
-                                    <span><img src="images/India_flag.png" class="me-1 mt-1" alt="flag image" /></span>
-                                    <p class="mb-0 mt-1">You are shopping on Amazon in .</p>
-                                </div>
-                                <a href="javascript:void(0)">Change country/region.</a>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-8 mx-auto">
-                        <div class="branch-info">
-                            <ul class="d-flex flex-wrap justify-content-center mx-4 mt-3">
-                                <li><a href="javascript:void(0);">Australia</a></li>
-                                <li><a href="javascript:void(0);">Brazil</a></li>
-                                <li><a href="javascript:void(0);">Canada</a></li>
-                                <li><a href="javascript:void(0);">China</a></li>
-                                <li><a href="javascript:void(0);">France</a></li>
-                                <li><a href="javascript:void(0);">Germany</a></li>
-                                <li><a href="javascript:void(0);">italy</a></li>
-                                <li><a href="javascript:void(0);">japan</a></li>
-                                <li><a href="javascript:void(0);">Mexico</a></li>
-                                <li><a href="javascript:void(0);">Netherlands</a></li>
-                                <li><a href="javascript:void(0);">Poland</a></li>
-                                <li><a href="javascript:void(0);">singapure</a></li>
-                                <li><a href="javascript:void(0);">spain</a></li>
-                                <li><a href="javascript:void(0);">Turkey</a></li>
-                                <li><a href="javascript:void(0);">United Arab Emirates</a></li>
-                                <li><a href="javascript:void(0);">United Kingdom</a></li>
-                                <li><a href="javascript:void(0);">United States</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
-
-    <section class="webflow">
-        <div class="flow-data">
-            <div class="row">
-                <div class="col-lg-2"></div>
-                <div class="col-lg-2 col-md-4 col-6">
-                    <div class="descitem ">
-                        <a href="javascript:void(0);" class="d-block">AbeBooks</a>
-                        <span class="d-inline-block">Books, art <br>& collectibles</span>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-md-4 col-6">
-                    <div class="descitem ser">
-                        <a href="javascript:void(0);" class="d-block">Amazon Web Services</a>
-                        <span class="d-inline-block">Scalable Cloud <br>& Computing Services</span>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-md-4 col-6">
-                    <div class="descitem ser">
-                        <a href="javascript:void(0);" class="d-block">Audible</a>
-                        <span class="d-inline-block">Download<br>& Audio Books</span>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-md-4 col-6">
-                    <div class="descitem ser">
-                        <a href="javascript:void(0);" class="d-block">IMDb</a>
-                        <span class="d-inline-block">Movies, TV<br>& collectibles</span>
-                    </div>
-                </div>
-                <div class="col-lg-2"></div>
-                <div class="col-lg-2"></div>
-                <div class="col-lg-2 col-md-4 col-6">
-                    <div class="descitem mt-3">
-                        <a href="javascript:void(0);" class="d-block">Shopbop</a>
-                        <span class="d-inline-block">Designer <br>& Fashion Brands</span>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-md-4 col-6">
-                    <div class="descitem mt-3 ser">
-                        <a href="javascript:void(0);" class="d-block"> Amazon Business</a>
-                        <span class="d-inline-block">Everything For<br>Your Business</span>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-md-4 col-6">
-                    <div class="descitem mt-3 ser">
-                        <a href="javascript:void(0);" class="d-block"> Prime Now</a>
-                        <span class="d-inline-block"> 2-Hour Delivery<br>on Everyday Items</span>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-md-4 col-6">
-                    <div class="descitem mt-3 ser">
-                        <a href="javascript:void(0);" class="d-block">Amazon Prime Music</a>
-                        <span class="d-inline-block">100 million songs, ad-free<br>& collectiblesOver 15
-                            million podcast episodes </span>
-                    </div>
-                </div>
-                <div class="col-lg-2"></div>
-
-            </div>
-
-        </div>
-        <div class="fot-nav text-center">
-            <ul class="d-flex mb-0 justify-content-center">
-                <li><a href="javascript:void(0);">Conditions of Use & Sale</a></li>
-                <li><a href="javascript:void(0);">Privacy Notice</a></li>
-                <li><a href="javascript:void(0);">Interest-Based Ads</a></li>
-            </ul>
-            <span>© 1996-2024, Amazon.com, Inc. or its affiliates</span>
-        </div>
-    </section> -->
 
     <script src="js/jquery-3.7.1.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
@@ -432,9 +230,9 @@
                 
                 tr.innerHTML = ` <td><img src="${val.Image}" alt="bag image" /></td>
                 <td>${val.name}</td>
-                <td>${val.price}</td>
+                <td>₹${val.price}</td>
                 <td>${quantity}</td>
-                <td>${storedPrice}</td>
+                <td>₹${storedPrice}</td>
                 <td><span onclick="cartdata(${ind})"><i class="fa-solid fa-trash"></i></span></td>
                 `
                 tbody.appendChild(tr);
